Clase Dic 3: Responsive Design

--- a/projects/my-team-page/src/index.html
+++ b/projects/my-team-page/src/index.html
@@ -64,7 +64,7 @@
           <p class="member__name">Stan John</p>
         </div>
       </article>
-      <footer class="team__footer">created by anamariasosam - devChallenges.io</footer>
+      <!-- <footer class="team__footer">created by anamariasosam - devChallenges.io</footer> -->
     </section>
   </body>
 </html>
